<resources>
    <string name="app_name">App_AmaniGharbi</string>
    <string name="welcome_title">Welcome to 4In Shield!</string>
    <string name="welcome_title_2">Sign in to continue</string>
    <string name="button_1">Sign in with Email         </string>
    <string name="button_2">Sign in with Gmail  </string>
    <string name="button_3">Sign in with Facebook  </string>
    <string name="no_account">No account? Sign up</string>
    <string name="forgot">Forgot password?</string>
    <string name="terms">I herby accept terms and conditions</string>
    <string name="txt_choose">Who is going to use this device?</string>
    <string name="txt_bienvenue">Welcom to 4IN Shield</string>
    <string name="title_device">Please add your child’s devices</string>
    <string name="p1_device">The information from your child’s device will help us to assess their mental health, duration of sleep, places visited, used applications  etc.
It also gives you the ability to block or allow installed applications</string>
    <string name="p2_device">Please follow the following steps: </string>
    <string name="l1">1. Bring your child’s mobile phone</string>
    <string name="l2">2. Scan this QR code with your child’s device camera</string>
    <string name="l3">3. You will be redirected to the 4IN shield application download page</string>
    <string name="l4">4. Once the application is installed, click Next </string>
    <string name="title_social">Please enter your child’s social media account information </string>
    <string name="p_social">This information will help us to protect your child from online abusive content and cyberharassment</string>
    <string name="edittext_1">Social network platform (Drop down)</string>
    <string name="edittext_2">Social network user name</string>
    <string name="edittext_3">Social network page URL</string>
    <string name="title_confirm_profile">Your child’s profile information has been successfully added</string>
    <string name="btn1_confirm">Add new profile</string>
    <string name="btn2_confirm">Continue</string>
    <string name="btn3_confirm">Modify profile information</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_add_child">Please enter the required information to complete your child’s profile</string>
    <string name="cong">Congradulation! </string>
    <string name="txt_cong">You have successfully completed you child profile.</string>
    <string name="add_new_child">Add another child</string>
    <string name="txt_cong2">Thank you for your confidence in us.</string>
    <string name="go_dashbord">Go to dashboard</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_in2">SignIn2Activity</string>
    <string name="title_activity_sign_in3">SignIn3Activity</string>
    <string name="title_activity_space_chose">SpaceChoseActivity</string>
    <string name="title_activity_bienvenue">BienvenueActivity</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>
    <string name="title_activity_confirm_profile">ConfirmProfileActivity</string>
    <string name="title_activity_add_child">AddChildActivity</string>
    <string name="title_activity_congrats_wizard_end">CongratsWizardEndActivity</string>
    <string name="title_activity_congrats_wizard_end2">CongratsWizardEnd2Activity</string>
    <string name="title_activity_child_dashboard">ChildDashboardActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_phone">Phone usage</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_social_media">Social media</string>
    <string name="title_alert">Alerts</string>
    <string name="title_activity_child_list">ChildListActivity</string>
</resources>