<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.app_amanigharbi.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_phone"
        android:name="com.example.app_amanigharbi.ui.phone.PhoneFragment"
        android:label="@string/title_phone"
        tools:layout="@layout/fragment_phone" />
    <fragment
        android:id="@+id/navigation_social"
        android:name="com.example.app_amanigharbi.ui.social.SocialFragment"
        android:label="@string/title_social_media"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_alert"
        android:name="com.example.app_amanigharbi.ui.social.SocialFragment"
        android:label="@string/title_alert"
        tools:layout="@layout/fragment_alert" />
</navigation>