<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue4in1"
    tools:context=".AddDeviceActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="75dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_device"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="30dp"
            android:layout_marginTop="90dp"
            android:text="@string/p1_device"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="30dp"
            android:layout_marginTop="220dp"
            android:text="@string/p2_device"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="40dp"
            android:layout_marginTop="260dp"
            android:text="@string/l1"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="40dp"
            android:layout_marginTop="290dp"
            android:text="@string/l2"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="40dp"
            android:layout_marginTop="345dp"
            android:text="@string/l3"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="40dp"
            android:layout_marginTop="390dp"
            android:text="@string/l4"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15dp" />
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/qr_code"
    android:layout_marginTop="420dp"
    android:layout_marginLeft="77dp"
    />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="610dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round2"
            android:drawableRight="@drawable/next"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:scaleType="centerCrop"
            android:text="Next"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/Blue4in1" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_skip"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="610dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/round2"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:scaleType="centerCrop"
            android:text="Skip"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/Blue4in1" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>