<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue4in1"
    tools:context=".CongratsWizardEndActivity">
    <TextView
        android:id="@+id/title_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="90dp"
        android:text="@string/cong"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_cong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="130dp"
        android:text="@string/txt_cong"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
       />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="210dp"
        android:src="@drawable/cong" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="580dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round2"
        android:drawableRight="@drawable/next"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:scaleType="centerCrop"
        android:text="@string/btn2_confirm"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Blue4in1"
        android:padding="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/round2"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:scaleType="centerCrop"
        android:text="@string/add_new_child"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Blue4in1"
        android:padding="10dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>