<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue4in1"
    tools:context=".ConfirmProfileActivity">

    <TextView
        android:id="@+id/title_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="110dp"
        android:text="@string/title_confirm_profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="210dp"
        android:src="@drawable/check" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="560dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round2"
        android:drawableRight="@drawable/next"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:scaleType="centerCrop"
        android:text="@string/btn2_confirm"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Blue4in1"
        android:padding="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/round2"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:scaleType="centerCrop"
        android:text="@string/btn1_confirm"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Blue4in1"
        android:padding="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="620dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round2"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:scaleType="centerCrop"
        android:text="@string/btn3_confirm"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Blue4in1"
        android:padding="10dp"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>